--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.0.0-rc.20",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-feather-icons": "^4.21.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
