--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
-    "vue-feather-icons": "^4.21.0"
+    "vue-feather-icons": "^4.21.0",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
