--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
     "core-js": "^2.6.5",
+    "graphql": "^14.5.7",
+    "graphql-tag": "^2.10.1",
     "jquery": "^3.4.1",
+    "tachyons": "^4.11.1",
     "vue": "^2.6.10",
+    "vue-apollo": "^3.0.0-rc.6",
     "vue-feather-icons": "^4.21.0",
     "vue-router": "^3.1.3"
   },
