--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.20",
+    "bootstrap-vue": "^2.0.3",
     "core-js": "^2.6.5",
     "graphql": "^14.5.7",
     "graphql-tag": "^2.10.1",
@@ -21,8 +21,11 @@
     "tachyons": "^4.11.1",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0-rc.6",
+    "vue-closable": "0.0.3",
     "vue-feather-icons": "^4.21.0",
-    "vue-router": "^3.1.3"
+    "vue-my-dropdown": "^2.1.0",
+    "vue-router": "^3.1.3",
+    "vue-switches": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
