--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.20",
+    "bootstrap-vue": "^2.0.3",
     "core-js": "^2.6.5",
+    "graphql": "^14.5.7",
+    "graphql-tag": "^2.10.1",
     "jquery": "^3.4.1",
+    "tachyons": "^4.11.1",
     "vue": "^2.6.10",
+    "vue-apollo": "^3.0.0-rc.6",
+    "vue-closable": "0.0.3",
     "vue-feather-icons": "^4.21.0",
-    "vue-router": "^3.1.3"
+    "vue-my-dropdown": "^2.1.0",
+    "vue-router": "^3.1.3",
+    "vue-switches": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
