API Error redirection & media page & Title pages

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.3",
+    "buefy": "^0.8.9",
     "core-js": "^2.6.5",
     "graphql": "^14.5.7",
     "graphql-tag": "^2.10.1",
     "jquery": "^3.4.1",
     "tachyons": "^4.11.1",
     "vue": "^2.6.10",
-    "vue-apollo": "^3.0.0-rc.6",
+    "vue-apollo": "^3.0.2",
     "vue-closable": "0.0.3",
     "vue-feather-icons": "^4.21.0",
     "vue-my-dropdown": "^2.1.0",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
